<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listItem"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="50dp"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/FAbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_plus"
        tools:ignore="UnusedAttribute" />

</RelativeLayout>