...
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:id="@+id/delID"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_del"/>

        <LinearLayout
...
